# pywr-next

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bench.sh  cliff.toml  clippy.toml  develop.sh  gen-changelog.sh  katex-header.html  pyproject.toml  setup.cfg
clp-sys/: Cargo.toml  build.rs
clp-sys/src/: bindings.rs  lib.rs
coin-or-sys/: Cargo.toml  build.rs
coin-or-sys/src/: cbc.rs  clp.rs  lib.rs
pywr-book/listings/adding-a-parameter/: Cargo.toml
pywr-book/listings/adding-a-parameter/src/: main.rs
pywr-cli/: Cargo.toml
pywr-cli/src/: main.rs
pywr-core/: Cargo.toml
pywr-core/benches/: random_models.rs
pywr-core/src/: agg_funcs.rs  aggregated_node.rs  aggregated_storage_node.rs  derived_metric.rs  edge.rs  lib.rs  metric.rs  model.rs  mutual_exclusivity.rs  network.rs  network_variable_config.rs  node.rs  predicate.rs  scenario.rs  state.rs  test_utils.rs  timestep.rs  utils.rs  virtual_storage.rs
pywr-core/src/agg_funcs/: mod.rs  py.rs
pywr-core/src/models/: mod.rs  multi.rs  simple.rs
pywr-core/src/parameters/: activation_function.rs  aggregated.rs  aggregated_index.rs  array.rs  asymmetric.rs  constant.rs  constant_scenario.rs  deficit.rs  delay.rs  difference.rs  discount_factor.rs  division.rs  errors.rs  hydropower.rs  indexed_array.rs  inter_model_transfer.rs  interpolate.rs  interpolated.rs  max.rs  min.rs  mod.rs  multi_threshold.rs  muskingum.rs  negative.rs  negativemax.rs  negativemin.rs  offset.rs  polynomial.rs  py.rs  rhai.rs  rolling.rs  simple_wasm.rs  threshold.rs  vector.rs
pywr-core/src/parameters/control_curves/: apportion.rs  index.rs  interpolated.rs  mod.rs  piecewise.rs  simple.rs  volume_between.rs
pywr-core/src/parameters/profiles/: daily.rs  diurnal.rs  mod.rs  monthly.rs  rbf-test.ipynb  rbf.rs  uniform_drawdown.rs  weekly.rs
pywr-core/src/recorders/: aggregator.rs  csv.rs  hdf.rs  memory.rs  metric_set.rs  mod.rs  py.rs
pywr-core/src/recorders/aggregator/: agg_func.rs  event.rs  mod.rs  periodic.rs
pywr-core/src/solvers/: builder.rs  col_amd.rs  col_edge_map.rs  mod.rs
pywr-core/src/solvers/cbc/: mod.rs  settings.rs
pywr-core/src/solvers/clp/: mod.rs  settings.rs
pywr-core/src/state/: flow.rs  mod.rs  storage.rs
pywr-python/: Cargo.toml  pyproject.toml
pywr-python/pywr/: __init__.py  __main__.py  cli.py  pywr.pyi
pywr-python/src/: lib.rs
pywr-python/tests/: test_models.py
pywr-python/tests/models/: output-prototype1.json  output-prototype2.json
pywr-schema/: Cargo.toml
pywr-schema-macros/: Cargo.toml
pywr-schema-macros/src/: lib.rs
pywr-schema/src/: agg_funcs.rs  digest.rs  edge.rs  error.rs  lib.rs  mermaid.rs  metric.rs  model.rs  network.rs  predicate.rs  py_utils.rs  v1.rs  variable_config.rs  visit.rs
pywr-schema/src/data_tables/: mod.rs  scalar.rs  vec.rs
pywr-schema/src/doc_examples/: scenario_domain1.json  scenario_domain2.json  scenario_domain3.json  scenario_domain4.json  scenario_domain5.json
pywr-schema/src/metric_sets/: mod.rs
pywr-schema/src/nodes/: abstraction.rs  annual_virtual_storage.rs  attributes.rs  components.rs  core.rs  delay.rs  loss_link.rs  mod.rs  monthly_virtual_storage.rs  piecewise_link.rs  piecewise_storage.rs  placeholder.rs  reservoir.rs  river.rs  river_gauge.rs  river_split_with_gauge.rs  rolling_virtual_storage.rs  slots.rs  turbine.rs  virtual_storage.rs  water_treatment_works.rs
pywr-schema/src/outputs/: csv.rs  hdf.rs  memory.rs  mod.rs
pywr-schema/src/parameters/: aggregated.rs  asymmetric_switch.rs  control_curves.rs  core.rs  data_frame.rs  delay.rs  discount_factor.rs  hydropower.rs  indexed_array.rs  inter_model_transfer.rs  interpolated.rs  mod.rs  offset.rs  placeholder.rs  polynomial.rs  profiles.rs  python.rs  rolling.rs  tables.rs  thresholds.rs
pywr-schema/src/test_models/: 30-day-licence.json  csv1-outputs-long.csv  csv1-outputs-wide.csv  csv1.json  csv2-outputs-long.csv  csv2-outputs-wide.csv  csv2.json  csv3-outputs-long.csv  csv3.json  delay1.json  hdf1.json  inflow.csv  link_with_soft_max.json  link_with_soft_min.json  loss_link1-expected.csv  loss_link1.json  loss_link2-expected.csv  loss_link2.json  memory1.json  multi_model_simple.json  mutual-exclusivity1.json  mutual-exclusivity2.csv  mutual-exclusivity2.json  mutual-exclusivity3.json  piecewise-link1-edges.csv  piecewise-link1-nodes.csv  piecewise_link1.json  piecewise_storage1.json  piecewise_storage2.json  piecewise_storage3.json  river_gauge1.json  river_loss1.json  river_split_with_gauge1.json  simple1.json  storage_max_volumes.json  timeseries.json  timeseries_pandas.json  timeseries_v1.json  wtw1-expected.csv  wtw1.json  (+1 more)
pywr-schema/src/timeseries/: align_and_resample.rs  mod.rs  pandas.rs  pandas_load.py  polars_dataset.rs
pywr-schema/tests/: 30-day-licence.json  abstraction1-expected.csv  abstraction1.json  abstraction2-expected.csv  abstraction2.json  agg-storage1.json  agg-storage2-expected.csv  agg-storage2.json  agg-storage3.json  csv1-outputs-long.csv  csv1-outputs-wide.csv  csv1.json  csv2-outputs-long.csv  csv2-outputs-wide.csv  csv2.json  csv3-outputs-long.csv  csv3.json  daily-profile-365.csv  daily-profile-366.csv  daily-profile1-expected.csv  daily-profile1.json  delay1-expected.csv  delay1.json  hdf1.json  inflow.csv  inflow2.csv  inflow3.csv  link_with_soft_max.json  link_with_soft_min.json  local-parameter1-expected.csv  local-parameter1.json  local-parameter2-expected.csv  local-parameter2.json  loss_link1-expected.csv  loss_link1.json  loss_link2-expected.csv  loss_link2.json  memory1.json  muskingum1-expected.csv  muskingum1.json  (+84 more)
pywr-schema/tests/invalid/: README.md  agg-storage-with-flow-node.json
pywr-schema/tests/multi1/: network1.json  network2.json
pywr-schema/tests/multi2/: model.json  network1.json  network2.json
pywr-schema/tests/v1/: breaklink-converted.json  breaklink.json  inline-parameter-converted.json  inline-parameter.json  river_split_with_gauge1-converted.json  scenarios-converted.json  scenarios.json  timeseries-converted.json  timeseries.json
(+289 files in other folders)
