[workspace]
resolver = "2"
members = [
    "coin-or-sys",
    "ipm-common",
    "ipm-ocl",
    "ipm-simd",
    # These are the listings for the book
    "pywr-book/listings/*",
    "pywr-cli",
    "pywr-core",
    "pywr-python",
    "pywr-schema",
    "pywr-schema-macros",
]

# IPM packages are not default because they require nightly (portable_simd).
default-members = [
    "coin-or-sys",
    "pywr-core",
    "pywr-schema",
    "pywr-cli",
    # "pywr-python",
]

[workspace.package]
readme = "README.md"
description = "A generalised water resource allocation model."
version = "2.0.0-beta4"
edition = "2024"
rust-version = "1.85"
authors = ["James Tomlinson <tomo.bbe@gmail.com>"]
repository = "https://github.com/pywr/pywr-next/"
license = "MIT OR Apache-2.0"
keywords = ["water", "modelling"]
categories = ["science", "simulation"]

[workspace.dependencies]
ahash = "0.8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4"
digest = "0.11"
digest-io = "0.1"
float-cmp = "0.10"
hdf5-metno = { version = "0.13", features = ["static", "zlib"] }
hex = "0.4.3"
md-5 = "0.11"
microlp = "0.5.0"
ndarray = "0.17"
num = "0.4"
polars = { version = "0.54", default-features = false }
pyo3 = { version = "0.28" }
pyo3-log = "0.13"
pyo3-polars = { version = "0.27", default-features = false }
pywr-v1-schema = "0.22"
rand = "0.10"
rand_chacha = "0.10"
rand_distr = "0.6"
schemars = { version = "1.2", features = ["chrono04"] }
serde = { version = "1", features = ["derive", ] }
serde_json = "1.0"
sha2 = "0.11"
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
tracing = { version = "0.1", features = ["log"] }
wide = "1.4.0"

[workspace.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
# debug = 0

[profile.release]
opt-level = 3
# lto = true
# strip = true

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
