[project]
name = "pywr"
version = "2.0.0beta"
description = ""
authors = [
    { name = "James Tomlinson", email = "tomo.bbe@gmail.com>" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
dependencies = [
    "pandas",
    "polars",
    "pyarrow",
    "click"
]

[project.optional-dependencies]
excel = ["openpyxl"]
hdf = ["pytables"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "pywr-python/Cargo.toml"
python-source = "pywr-python"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
