[project]
name = "pywr"
description = ""
authors = [
    { name = "James Tomlinson", email = "tomo.bbe@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
dependencies = [
    "pandas",
    "polars>=1.32",
    "pyarrow",
    "click",
]
dynamic = ["version"]

[project.optional-dependencies]
excel = ["openpyxl"]
hdf = ["h5py"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "maturin>=1.0,<2.0",
]
docs = [
    "json-schema-for-humans>=1.4.1",
    "pdoc",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "pywr-python/Cargo.toml"
python-source = "pywr-python"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[tool.ruff]
exclude = ["coin-or-sys/vendor"]
