[metadata]
license_file = LICENSE
name = pywr
author = James E. Tomlinson
author_email = james@jtdms.co.uk
description = "Python Water Resource model (experimental)"
long_description = file:README.md
url = https://github.com/pywr/pywr-next
classifiers =
    Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest

