[package]
name = "coin-or-sys"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description = "Low-level bindings to COIN-OR CLP (Coin-or linear programming) and CBC (Coin-or branch and cut)."
license = "MIT OR Apache-2.0"
repository.workspace = true

[features]
default = ["clp"]
clp = []
cbc = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
