[package]
name = "pywr-cli"
version = "2.0.0-dev"
edition = "2021"
rust-version = "1.70"
description = "A generalised water resource allocation model."
readme = "../README.md"
repository = "https://github.com/pywr/pywr-next/"
license = "MIT OR Apache-2.0"
keywords = ["water", "modelling"]
categories = ["science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pywr-v1-schema = { workspace = true }
schemars = { workspace = true }

pywr-core = { path = "../pywr-core" }
pywr-schema = { path = "../pywr-schema" }

[features]
cbc = ["pywr-core/cbc", "pywr-schema/cbc"]
highs = ["pywr-core/highs", "pywr-schema/highs"]
ipm-ocl = ["pywr-core/ipm-ocl", "pywr-schema/ipm-ocl"]
ipm-simd = ["pywr-core/ipm-simd", "pywr-schema/ipm-simd"]
