[package]
name = "pywr-core"
version = "2.0.0-dev"
authors = ["James Tomlinson <tomo.bbe@gmail.com>"]
edition = "2021"
rust-version = "1.70"
description = "A generalised water resource allocation model."
readme = "../README.md"
repository = "https://github.com/pywr/pywr-next/"
license = "MIT OR Apache-2.0"
keywords = ["water", "modelling"]
categories = ["science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
thiserror = { workspace = true }
ndarray = { workspace = true }
num = { workspace = true }
float-cmp = { workspace = true }
hdf5-metno = { workspace = true }
csv = { workspace = true }
coin-or-sys = { path = "../coin-or-sys", version = "0.1.0" }
ipm-ocl = { path = "../ipm-ocl", optional = true }
ipm-simd = { path = "../ipm-simd", optional = true }
tracing = { workspace = true }
highs-sys = { version = "1.6", optional = true }
nalgebra = "0.33"
chrono = { workspace = true }
polars = { workspace = true }
pyo3 = { workspace = true, features = ["chrono", "macros"], optional = true }
rayon = "1.6"
ocl = { version = "0.19", optional = true }
rand = { workspace = true }
rand_distr = "0.4"
rand_chacha = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
wide = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.6"

[features]
cbc = []
highs = ["dep:highs-sys"]
ipm-ocl = ["dep:ipm-ocl", "dep:ocl"]
ipm-simd = ["dep:ipm-simd", "dep:wide"]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]

[[bench]]
name = "random_models"
harness = false
