[package]
name = "pywr-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["pyo3"]
clp = ["dep:coin-or-sys", "coin-or-sys/clp"]
cbc = ["dep:coin-or-sys", "coin-or-sys/cbc"]
highs = ["dep:highs-sys"]
ipm-ocl = ["dep:ipm-ocl", "dep:ocl"]
ipm-simd = ["dep:ipm-simd", "dep:wide"]
microlp = ["dep:microlp"]
pyo3 = ["dep:pyo3", "dep:pyo3-polars"]

# File formats
hdf5 = ["dep:hdf5-metno"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
chrono = { workspace = true }
coin-or-sys = { path = "../coin-or-sys", version = "0.1.0", optional = true }
csv = { workspace = true }
float-cmp = { workspace = true }
hdf5-metno = { workspace = true, optional = true }
highs-sys = { version = "1.11", optional = true }
ipm-ocl = { path = "../ipm-ocl", optional = true }
ipm-simd = { path = "../ipm-simd", optional = true }
libc = "0.2"
microlp = { workspace = true, optional = true }
nalgebra = "0.34"
ndarray = { workspace = true }
num = { workspace = true }
ocl = { version = "0.19", optional = true }
# We are only need polars for date/time parsing.
polars = { workspace = true, features = ["temporal"] }
pyo3 = { workspace = true, features = ["chrono", "macros"], optional = true }
pyo3-polars = { workspace = true, optional = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
wide = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "random_models"
harness = false
