[package]
name = "pywr-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
description = "A generalised water resource allocation model."
readme = "../README.md"
repository = "https://github.com/pywr/pywr-next/"
license = "MIT OR Apache-2.0"
keywords = ["water", "modelling", "python"]
categories = ["science", "simulation"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3-polars = "0.7.0"
pyo3 = { version = "0.19.0" }
serde = { workspace = true }
serde_json = { workspace = true }
pywr-core = { path="../pywr-core" }
pywr-schema = { path="../pywr-schema" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "pywr"
crate-type = ["cdylib"]
