[package]
name = "pywr-python"
version = "2.0.0-dev"
edition = "2021"
rust-version = "1.60"
description = "A generalised water resource allocation model."
readme = "../README.md"
repository = "https://github.com/pywr/pywr-next/"
license = "MIT OR Apache-2.0"
keywords = ["water", "modelling", "python"]
categories = ["science", "simulation"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {  workspace = true, features = ["extension-module", "macros"] }
pyo3-polars = {  workspace = true }
pyo3-log = {  workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

pywr-core = { path="../pywr-core" }
pywr-schema = { path="../pywr-schema" }


[lib]
name = "pywr"
crate-type = ["cdylib"]
