[package]
name = "pywr-python"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The Github workflow is configured to use the minimum version corresponding to the `abi3-pyXX` feature enabled here.
# Please remember to update the workflow if changing the ABI version.
pyo3 = { workspace = true, features = ["extension-module", "macros", "chrono"] }
pyo3-polars = { workspace = true }
pyo3-log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
pywr-v1-schema = { workspace = true }
pywr-core = { path = "../pywr-core" }
pywr-schema = { path = "../pywr-schema" }


[lib]
name = "pywr"
crate-type = ["cdylib"]

[features]
cbc = ["pywr-core/cbc", "pywr-schema/cbc"]
highs = ["pywr-core/highs", "pywr-schema/highs"]
ipm-ocl = ["pywr-core/ipm-ocl", "pywr-schema/ipm-ocl"]
ipm-simd = ["pywr-core/ipm-simd", "pywr-schema/ipm-simd"]
