[package]
name = "pywr-schema-macros"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "pywr_schema_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
heck = "0.5"
proc-macro2 = "1.0"
