[package]
name = "pywr-schema"
version = "2.0.0-dev"
authors = ["James Tomlinson <tomo.bbe@gmail.com>"]
edition = "2021"
rust-version = "1.70"
description = "A generalised water resource allocation model."
readme = "../README.md"
repository = "https://github.com/pywr/pywr-next/"
license = "MIT OR Apache-2.0"
keywords = ["water", "modelling"]
categories = ["science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svgbobdoc = { git = "https://github.com/yvt/svgbobdoc.git", features = ["enable"] }
polars = { workspace = true, features = ["csv", "diff", "dtype-datetime", "dtype-date", "dynamic_group_by"], optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-polars = { workspace = true, optional = true }
strum = "0.26"
strum_macros = "0.26"
schemars = { workspace = true }
hdf5-metno = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
num = { workspace = true }
float-cmp = { workspace = true }
ndarray = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
pywr-v1-schema = { workspace = true }
pywr-core = { path = "../pywr-core", optional = true }
chrono = { workspace = true }
pywr-schema-macros = { path = "../pywr-schema-macros" }

[dev-dependencies]
tempfile = "3.15"

[features]
# Core feature requires additional dependencies
core = ["dep:pywr-core", "dep:hdf5-metno", "dep:csv", "dep:polars", "dep:pyo3-polars", "dep:ndarray", "dep:tracing"]
default = ["core", "pyo3"]
cbc = ["pywr-core/cbc"]
highs = ["pywr-core/highs"]
ipm-ocl = ["pywr-core/ipm-ocl"]
ipm-simd = ["pywr-core/ipm-simd"]
test-python = []
pyo3 = ["dep:pyo3", "pywr-core/pyo3"]
