[package]
name = "pywr-schema"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Core feature requires additional dependencies
core = ["dep:pywr-core", "dep:polars", "dep:ndarray"]
default = ["core", "pyo3", "hdf5", "clp"]

# Core solvers
clp = ["pywr-core/clp"]
cbc = ["pywr-core/cbc"]
highs = ["pywr-core/highs"]
ipm-ocl = ["pywr-core/ipm-ocl"]
ipm-simd = ["pywr-core/ipm-simd"]
test-python = []
pyo3 = ["dep:pyo3", "pywr-core/pyo3", "dep:pyo3-polars"]

# File formats
hdf5 = ["dep:hdf5-metno", "pywr-core/hdf5"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
csv = { workspace = true }
digest = { workspace = true }
float-cmp = { workspace = true }
hdf5-metno = { workspace = true, optional = true }
hex = { workspace = true }
md-5 = { workspace = true }
ndarray = { workspace = true, optional = true }
num = { workspace = true }
# "timezones" feature is only needed v0.52 (see https://github.com/pola-rs/polars/issues/25148)
polars = { workspace = true, features = ["lazy", "rows", "ndarray", "diff", "dtype-datetime", "dtype-date", "dynamic_group_by", "timezones"], optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-polars = { workspace = true, optional = true }
pywr-core = { path = "../pywr-core", default-features = false, optional = true }
pywr-schema-macros = { path = "../pywr-schema-macros" }
pywr-v1-schema = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = "0.27"
strum_macros = "0.27"
svgbobdoc = { git = "https://github.com/jetuk/svgbobdoc.git", features = ["enable"], branch = "svgbob-0_7_5" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.24"
